@@ -21,6 +21,7 @@ LMDB 0.9.17 Release Engineering
 	Fix ITS#8313 mdb_rebalance dummy cursor
 	Fix ITS#8315 dirty_room in nested txn
 	Fix ITS#8316 page_merge cursor tracking
+	Fix ITS#8321 cursor tracking
 	Added mdb_txn_id() (ITS#7994)
 	Added robust mutex support
 	Miscellaneous cleanup/simplification
